6 - Add backend endpoints to create meeting.